worked on CRUD operations

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,5 +16,8 @@
     {% block content %}
 
     {% endblock content %}
+    <div>
+        <a href="{% url 'post_new' %}">+ Add New Post</a>
+    </div>
 </body>
 </html>
