--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
     <header>
         <h1><a href="{% url 'home' %}">ALL BOOKS READ THIS YEAR</a></h1>
     </header>
-
+        {% if user.is_authenticated %}
+            <h2>Hey, {{ user.username }}</h2>
+            <p><a href="{% url 'logout' %}">Log out</a></p>
+        {% else %}
+            <p>You are not Logged in</p>
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
     {% block content %}
 
     {% endblock content %}
